--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.mustache
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.mustache
@@ -7,7 +7,7 @@
   <link rel="icon" href="">
   <meta name="author" content="">
   <title>OneStepBooking.com</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Logo slider -->
   <link href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" rel="stylesheet">
@@ -15,12 +15,10 @@
   <!-- Checkbox toggle switch -->
   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-  <!-- Include Bootstrap Datepicker -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
-  <!-- font awesome -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- Custom date range -->
+  <script type="text/javascript" src="http://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 </head>
 
 <body>
@@ -28,8 +26,7 @@
     <nav class="[ relative z--1 ] navbar">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="[ button button--outline ] navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-            aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="[ button button--outline ] navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
             </button>
           <a class="navbar-brand" href="#">
@@ -48,8 +45,7 @@
               <a href="#" class="text--uppercase link__border link__border nav__item">About us</a>
             </li>
             <li class="dropdown">
-              <a href="#" class="text--uppercase relative link__border nav__item dropdown-toggle" data-toggle="dropdown" role="button"
-                aria-haspopup="true" aria-expanded="false">
+              <a href="#" class="text--uppercase relative link__border nav__item dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Your booking
                 </a>
               <ul class="p--2 list--none [ dropdown-menu pull-right ] background--white">
@@ -75,7 +71,7 @@
           <form class="js-search-form">
             <fieldset>
               <legend class="h1 [ text--center text--white ]">One Easy Flight Search.</legend>
-              <!--<div class="col-xs-12 col-md-12">
+              <div class="col-xs-12 col-md-12">
                 <div class="[ p--1 mb--2 ] [ alert alert-danger alert-dismissible ]" role="alert">
                   <strong>First name</strong>: Error text
                 </div>
@@ -84,7 +80,7 @@
                 <div class="[ p--1 mb--2 ] [ alert alert-warning alert-dismissible ]" role="alert">
                   <strong>Last name</strong>: Error text
                 </div>
-              </div>-->
+              </div>
               <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
                 <label class="d--block text--white mb--1 hidden-xs" for="flight-from">Travelling from</label>
                 <input type="text" id="flight-from" name="flight-from" placeholder="From" value="" class="col-xs-12">
@@ -95,7 +91,7 @@
               </div>
               <div class="[ col-xs-9 col-sm-5 col-md-5 ] mb--3">
                 <label class="d--block text--white mb--1" for="flight-departure"><span class="hidden-xs">Date</span> Departing</label>
-                <input type="text" id="flight-departure" name="flight-departure" placeholder="Date" value="08-09-2017" class="date-popout col-xs-12">
+                <input type="text" id="flight-departure" name="daterange" placeholder="Date" value="2017-08-19" class="col-xs-12">
               </div>
               <div class="[ col-xs-3 col-sm-2 col-md-2 ] mb--3">
                 <div class="d--inline-block [ text--white text--center ] mb--1">Return?</div>
@@ -107,9 +103,9 @@
                   </label>
                 </div>
               </div>
-              <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3 date-return">
+              <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3">
                 <label class="d--block text--white mb--1" for="flight-return"><span class="hidden-xs">Date</span> Returning</label>
-                <input type="text" id="flight-return" name="flight-return" placeholder="Date" value="11-09-2017" class="date-popout col-xs-12">
+                <input type="date" id="flight-return" name="flight-return" placeholder="Date" value="2017-08-19" class="col-xs-12">
               </div>
               <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
                 <label class="d--block text--white mb--1" for="flight-passengers">Adults</label>
@@ -142,32 +138,32 @@
   </section>
 
   <section class="border-bottom text--center [ mb--3 pt--3 pb--3 ] brands [ regular slider ]">
-    <div><img alt="Aer Lingus" src="/styles-osb/public/images/onestepbooking__logo--aer-lingus.png"></div>
-    <div><img alt="Air Asia" src="/styles-osb/public/images/onestepbooking__logo--air-asia.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--airarabia.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--cebu-pacific.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--cityjet.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--corendon.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--easyjet.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--flybe.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--flyscoot.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--jet2.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--monarch.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--norwegian.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--pegasus.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--ryanair.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--southwest.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--spirit.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--sun-express.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--thomas-cook.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--transavia.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--tui-fly.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--virgin-australia.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--volotea.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--vueling.png"></div>
-    <div><img alt="Air Arabia" src="/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Aer Lingus" src="/images/onestepbooking__logo--aer-lingus.png"></div>
+    <div><img alt="Air Asia" src="/images/onestepbooking__logo--air-asia.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--airarabia.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--cebu-pacific.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--cityjet.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--corendon.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--easyjet.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--flybe.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--flyscoot.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--jet2.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--monarch.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--norwegian.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--pegasus.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--ryanair.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--southwest.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--spirit.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--sun-express.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--thomas-cook.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--transavia.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--tui-fly.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--virgin-australia.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--volotea.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--vueling.png"></div>
+    <div><img alt="Air Arabia" src="/images/onestepbooking__logo--eurowings.png"></div>
   </section>
 
   <section class="[ mb--3 pt--2 pb--3 ] live-prices">
@@ -250,7 +246,54 @@
             </div>
           </div>
           <div class="tab-pane" id="london" role="tabpanel">
-            London
+            <div class="[ col-xs-6 col-md-6 ]">
+              <a href="#" class="link--unstyled live-search">
+                <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
+                <div class="col-md-3">18 Oct 17</div>
+                <div class="col-xs-6 col-md-2">
+                  <strong>£60</strong>
+                </div>
+                <div class="col-xs-6 col-md-3 cta">
+                  <span class="button button--green">Buy</span>
+                </div>
+              </a>
+            </div>
+            <div class="[ col-xs-6 col-md-6 ]">
+              <a href="#" class="link--unstyled live-search">
+                <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
+                <div class="col-md-3">18 Oct 17</div>
+                <div class="col-xs-6 col-md-2">
+                  <strong>£60</strong>
+                </div>
+                <div class="col-xs-6 col-md-3 cta">
+                  <span class="button button--green">Buy</span>
+                </div>
+              </a>
+            </div>
+            <div class="[ col-xs-6 col-md-6 ]">
+              <a href="#" class="link--unstyled live-search">
+                <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
+                <div class="col-md-3">18 Oct 17</div>
+                <div class="col-xs-6 col-md-2">
+                  <strong>£60</strong>
+                </div>
+                <div class="col-xs-6 col-md-3 cta">
+                  <span class="button button--green">Buy</span>
+                </div>
+              </a>
+            </div>
+            <div class="[ col-xs-6 col-md-6 ]">
+              <a href="#" class="link--unstyled live-search">
+                <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
+                <div class="col-md-3">18 Oct 17</div>
+                <div class="col-xs-6 col-md-2">
+                  <strong>£25</strong>
+                </div>
+                <div class="col-xs-6 col-md-3 cta">
+                  <span class="button button--green">Buy</span>
+                </div>
+              </a>
+            </div>
           </div>
           <div class="tab-pane" id="liverpool" role="tabpanel">
             Liverpool
@@ -261,9 +304,8 @@
         </div>
 
         <div class="mt--3 col-xs-12 col-md-12">
-          <p>Prices shown are for one-way flights that our customers have recently found and started to book, so should be a
-            good indication of popular routes and flight times. They are for reference only but we hope they help you find
-            flights that offer exceptional value.</p>
+          <p>Prices shown are for one-way flights that our customers have recently found and started to book, so should be a good indication of popular routes and flight times. They are for reference only but we hope they help you find flights that offer
+            exceptional value.</p>
         </div>
       </div>
     </div>
@@ -433,9 +475,7 @@
               <a href="#" class="text--white">Privacy Policy</a>
             </li>
           </ul>
-          <p>OneStepBooking.com is a trading name of BF Aviation Ltd, a limited company incorporated in England and Wales under
-            registration number 08615973, whose registered office is at 16 Beaufort Court, Admirals Way, Docklands, London,
-            E14 9XL.</p>
+          <p>OneStepBooking.com is a trading name of BF Aviation Ltd, a limited company incorporated in England and Wales under registration number 08615973, whose registered office is at 16 Beaufort Court, Admirals Way, Docklands, London, E14 9XL.</p>
           <div class="copyright">
             © OneStepBooking.com All Rights Reserved.
           </div>
@@ -475,22 +515,13 @@
     });
   </script>
 
-  <script>
-    $(document).ready(function () {
-      $('.date-popout')
-        .datepicker({
-          autoclose: true,
-          format: 'dd/mm/yyyy'
-        })
-    });
-  </script>
-
-  <script>
-    $(document).ready(function () {
-      $('.onoffswitch-checkbox')
-        .click(function () {
-          $('.date-return').toggleClass('inactive');
-        })
+  <script type="text/javascript">
+    $(function() {
+      $('input[name="daterange"]').daterangepicker({
+        locale: {
+          format: 'MM/DD/YYYY'
+        }
+      });
     });
   </script>
 
